# FlexibleFasterDecoder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ffd/: __init__.py  __main__.py  banner.py  cli.py  config.py  data.py  datasets.py  hardware.py  hf_uploader.py  report.py  spec_head.py  trainer.py  utils.py
