[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexible-faster-decoder"
version = "0.1.0"
description = "CLI toolkit for generating Flexible Faster Decoder MTP heads for MoE LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OpenCode", email = "dev@opencode.ai"}
]
dependencies = [
  "typer[all]>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.6.4",
  "huggingface_hub>=0.22.2",
  "psutil>=5.9.8",
  "pillow>=10.2.0",
  "torch>=2.3.0",
  "transformers>=4.41.2",
  "datasets>=2.19.0",
  "accelerate>=0.32.0",
  "safetensors>=0.4.3"
]

[project.scripts]
ffd = "ffd.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]
